<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_principal"
            android:icon="@drawable/ic_principal"
            android:title="@string/principal" />
        <item
            android:id="@+id/nav_servico"
            android:icon="@drawable/ic_servico"
            android:title="@string/servico" />
        <item
            android:id="@+id/nav_cliente"
            android:icon="@drawable/ic_cliente"
            android:title="@string/cliente" />

    </group>



    <item android:title="Entre em Contato">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_contato"
                    android:icon="@drawable/ic_contato"
                    android:title="@string/contato" />
                <item
                    android:id="@+id/nav_sobre"
                    android:icon="@drawable/ic_sobre"
                    android:title="@string/sobre" />
            </group>
        </menu>
    </item>

</menu>